--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,12 @@ dependencies {
 	// Database
 	runtimeOnly 'org.postgresql:postgresql'
 
-	// Security
+	// Security & JWT
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'
 
 	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-thymeleaf-test'
