--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,27 @@
-/gradlew text eol=lf
-*.bat text eol=crlf
-*.jar binary
+# ----- Default -----
+* -text
+
+# ----- Source code -----
+*.java  text eol=lf
+*.kt    text eol=lf
+*.groovy text eol=lf
+
+# ----- Scripts -----
+*.sh    text eol=lf
+gradlew text eol=lf
+
+# ----- Config -----
+*.yml   text eol=lf
+*.yaml  text eol=lf
+*.properties text eol=lf
+*.env   text eol=lf
+
+# ----- Windows only -----
+*.bat   text eol=crlf
+*.ps1   text eol=crlf
+
+# ----- Binaries -----
+*.jar   binary
+*.png   binary
+*.jpg   binary
+*.pdf   binary
